<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tab2"
    android:padding="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewStudentId"
        android:textSize="17dp"
        android:layout_margin="2dp"
        android:background="#07E0FB"
        />
    <TextView
        android:id="@+id/textViewStudentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewStudentId"
        android:layout_margin="2dp"
        android:textSize="17dp"
        android:background="#07E0FB"
        />
    <EditText
        android:id="@+id/editName"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/editName">

    </EditText>

    <EditText
        android:id="@+id/editSurname"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/editSurname">

    </EditText>

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewGender"
        android:layout_marginTop="1dp"
        android:textSize="15dp"
        android:background="#07E0FB"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioMale"
            android:layout_margin="2dp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/radioFemale"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textViewSelectFacultie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewSelectFacultie"
        android:textSize="15dp"
        android:background="#07E0FB"
        />

<!-- wiil be show admistraion table contens  in tab2-->
    <Spinner
        android:id="@+id/spinner_adminstration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonRegister"
            android:onClick="onRegisterStudent"
            android:backgroundTint="#2A8585"
            />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancel"
            android:onClick="onCancelStudentTab2"
            android:backgroundTint="#2A8585"
            />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonUpdateTab2"
            android:onClick="onUpdateStudentTab2"
            android:backgroundTint="#2A8585"
            />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSearchTab2"
            android:onClick="onSearchStudentTab2"
            android:backgroundTint="#2A8585"
            />

    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

<!-- to show registered student on tab2 -->
    <ListView
        android:id="@+id/listviewStudents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </HorizontalScrollView>



</LinearLayout>

